2001-04-27  Ramiro Estrugo  <ramiro@eazel.com>

	* components/help/hyperbola-main.c: (main): 
	Fix bug 8172 - Nautilus spews GConf error upon repeated clicking
	of "help"
	
	Intiialize preferences before creating the factory in case code in
	the factory needs to use prefernces.
	
	* src/nautilus-application.c: (nautilus_application_startup):
	Dont do the GMC migration if we are about to kill the nautilus
	shell.  Fixes criticals when 'nautilus --quit' is used.
	
2001-04-27  Andy Hertzfeld  <andy@eazel.com>

	* components/news/Makefile.am:
	* components/news/changed_bullet.png:
	added a placed holder "new article" bullet; hopefully, Arlo will
	provide us with a real one soon.
	
	* components/news/nautilus-news.c: (do_destroy), (draw_rss_items),
	(toggle_open_state), (nautilus_news_make_new_channel),
	(check_for_updates), (nautilus_news_load_images),
	(update_interval_changed), (make_news_view):
	made it use the changed bullet when appropriate; also, completed
	the preferences work by making it watch the update interval preference.
	
2001-04-27  Darin Adler  <darin@eazel.com>

	* libnautilus-extensions/nautilus-thumbnails-jpeg.c:
	(fatal_error_handler), (output_message_handler),
	(nautilus_thumbnail_load_scaled_jpeg): Added error handling
	based on Alex Larsson's revised patch. Needs more testing.

2001-04-27  Darin Adler  <darin@eazel.com>

	Fixed bug 7818 (Duplicating a link to a file on a different
	partition gives "You can't copy a file over itself" error).

	* libnautilus-extensions/nautilus-file-operations.c:
	(nautilus_file_operations_copy_move): There was a bug in the call
	to check_same_fs in here (it was passing in the target URI, which
	is often a file that doesn't even exist), so I removed that check.
	Did some other cleanups too.

2001-04-27  John Sullivan  <sullivan@eazel.com>

	Fixed bug 3214 (Confusing how to make bookmark changes "stick")
	Fixed bug 6277 (Bookmarks window should close with Escape key)
