@@ -1,5 +1,12 @@
 2001-04-27  Ramiro Estrugo  <ramiro@eazel.com>
 
+	* libnautilus-extensions/nautilus-preferences.c:
+	(nautilus_self_check_preferences):
+	Disabled preferences self checks until I can debug why these
+	seemingly harmless tests dont work.
+
+2001-04-27  Ramiro Estrugo  <ramiro@eazel.com>
+
 	* components/help/hyperbola-main.c: (main): 
 	Fix bug 8172 - Nautilus spews GConf error upon repeated clicking
 	of "help"
